<resources>
    <string name="app_name">SpaceX-Info(Demo)</string>
    <string name="no_network_connection_string">No network connection</string>
    <string name="check_network_connection_string">Check network connection</string>
    <string name="oops_something_wrong_string">Oops, something went wrong</string>
    <string name="try_again_latter_string">Try again latter</string>
    <string name="company_description_text">%s was founded by %s in %d. It has now %d employees, %d launch sites, and is valued at %s USD</string>
    <string name="company_string">Company</string>
    <string name="launches_string">Launches</string>
    <string name="mission_string">Mission:</string>
    <string name="date_time_string">Date/Time:</string>
    <string name="rocket_string">Rocket(s):</string>
    <string name="days_count_mask">Day(s) %s now:</string>
    <string name="filter_string">Filter</string>
    <string name="no_information_string">No information</string>
    <string name="ok_string">Ok</string>
    <string name="begin_string">Begin</string>
    <string name="years_string">Years:</string>
    <string name="dash_string">–</string>
    <string name="_2022_string">2022</string>
    <string name="_1970_string">1970</string>
    <string name="success_string">Success</string>
    <string name="failed_string">Failed</string>
    <string name="upcoming_string">Upcoming</string>
    <string name="desc_sort_string">DESC</string>
    <string name="asc_sort_string">ASC</string>
    <string name="sort_string">Sort</string>
    <string name="none_string">None</string>
    <string name="from_string">from</string>
    <string name="since_string">since</string>
</resources>