<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="40dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDividerFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/gray_51"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineDividerFilter"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOkFilter"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:text="@string/ok_string"
        android:textColor="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineDividerFilter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewLabelYearsFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/years_string"
        android:textAppearance="@style/PlainTextAppearance.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextBeginYearsFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:digits="0123456789"
        android:hint="@string/_1970_string"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:lines="1"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="@id/textViewLabelYearsFilter"
        app:layout_constraintStart_toEndOf="@id/textViewLabelYearsFilter"
        app:layout_constraintTop_toTopOf="@id/textViewLabelYearsFilter" />

    <TextView
        android:id="@+id/textViewDashFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash_string"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@id/editTextBeginYearsFilter"
        app:layout_constraintStart_toEndOf="@id/editTextBeginYearsFilter"
        app:layout_constraintTop_toTopOf="@id/editTextBeginYearsFilter" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEndYearsFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:hint="@string/_2022_string"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:lines="1"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="@id/editTextBeginYearsFilter"
        app:layout_constraintStart_toEndOf="@id/textViewDashFilter"
        app:layout_constraintTop_toTopOf="@id/editTextBeginYearsFilter" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_51"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDividerFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextBeginYearsFilter" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxUpcomingFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_string"
        android:textAppearance="@style/PlainTextAppearance.Medium"
        app:layout_constraintStart_toStartOf="@id/textViewLabelYearsFilter"
        app:layout_constraintTop_toBottomOf="@id/editTextBeginYearsFilter" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_51"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDividerFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxUpcomingFilter" />

    <RadioGroup
        android:id="@+id/radioGroupSuccessFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButtonNoneFilter"
        app:layout_constraintStart_toStartOf="@id/checkboxUpcomingFilter"
        app:layout_constraintTop_toBottomOf="@id/checkboxUpcomingFilter">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonNoneFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none_string"
            android:textAppearance="@style/PlainTextAppearance.Medium" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonSuccessFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_string"
            android:textAppearance="@style/PlainTextAppearance.Medium" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonFailedFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed_string"
            android:textAppearance="@style/PlainTextAppearance.Medium" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewLabelSortFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_string"
        android:textAppearance="@style/PlainTextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textViewLabelYearsFilter"
        app:layout_constraintEnd_toEndOf="@id/buttonOkFilter"
        app:layout_constraintStart_toStartOf="@id/buttonOkFilter"
        app:layout_constraintTop_toTopOf="@id/textViewLabelYearsFilter" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/toggleButtonSortFilter"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:paddingHorizontal="10dp"
        android:textColor="?attr/colorPrimary"
        android:textOff="@string/asc_sort_string"
        android:textOn="@string/desc_sort_string"
        app:layout_constraintEnd_toEndOf="@id/buttonOkFilter"
        app:layout_constraintStart_toStartOf="@+id/buttonOkFilter"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelSortFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>